feat(account): assign revoke permissions
